# sui_shio_auction

./: Cargo.toml  README.md  coins.json
src/: client.rs  coins_registry.rs  config.rs  logging.rs  main.rs  opportunity.rs  parser.rs  ws_client.rs
